--- a/movementsonglobe.html
+++ b/movementsonglobe.html
@@ -6116,7 +6116,7 @@ document.getElementById("crosshair-after-before-value").addEventListener("input"
     const dracoLoader = new window.THREE.DRACOLoader();
 
     // Set the decoder path (replace with your web-accessible path, e.g., GitHub Pages)
-    dracoLoader.setDecoderPath('C:\Users\josip\Desktop\dont touch\system\PlanNet\draco');
+    dracoLoader.setDecoderPath('https://github.com/1ksn1ks/PlanNet/tree/main/draco');
     // Note: 'C:\Users\josip\Desktop\dont touch\system\PlanNet\draco' is a local path and won't work in a browser.
     // Host the Draco files (draco_decoder.js, draco_decoder.wasm, draco_wasm_wrapper.js) on a server and update this URL.
 
