--- a/index.html
+++ b/index.html
@@ -2405,7 +2405,7 @@ let currentUfoModel = null; // Declare outside the function to persist across ca
                       : defaultModelUrl; // Use default model URL if no valid URL is found
 
                       
-        await extractTopicId();
+extractTopicId();
 
               await loadUfoModel(modelUrl); // Load the model using the determined URL
                confirmNFTFunction(accountId); // Call confirmNFTFunction after the process is complete
