--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ font-size: 1.5vh;
     oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
   ></textarea>
   <div style="display: flex; flex-direction: row; width: 100%;">
-  <button class="toolbar-column-btns" id="button1" style="display: block; width: 30%;">Profile pic</button>
+  <button class="toolbar-column-btns" id="button1" style="display: block; width: 30%;">Picture</button>
   <button class="toolbar-column-btns" id="button2" style="display: block; width: 30%; margin-left: 5%;">Username</button>
   <button class="toolbar-column-btns" id="button_for_click_url" style="display: block; width: 30%; margin-left: 5%;">CLICK2LINK</button>
 </div>
